// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationStatusCard matches snapshot when status = ERROR 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--color StyledProps--color-red500 StyledProps--background-red350"
  >
    Error
  </div>
</div>
`;

exports[`VerificationStatusCard matches snapshot when status = IN_PROGRESS 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--color StyledProps--color-blue500 StyledProps--background-blue350"
  >
    In Progress
  </div>
</div>
`;

exports[`VerificationStatusCard matches snapshot when status = VERIFICATION_FAILED 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--color StyledProps--color-red500 StyledProps--background-red350"
  >
    Failed
  </div>
   
</div>
`;

exports[`VerificationStatusCard matches snapshot when status = VERIFICATION_PASSED 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main verificationStatusCard StyledProps--color StyledProps--color-green500 StyledProps--background-green350"
  >
    Passed
  </div>
</div>
`;
